--- a/Example/Podfile
+++ b/Example/Podfile
@@ -10,3 +10,14 @@ target 'Mac' do
   use_frameworks!
   pod 'PianoView', :path => '../'
 end
+
+target 'TV' do
+  use_frameworks!
+  pod 'PianoView', :path => '../'
+end
+
+post_install do |installer|
+  installer.pods_project.build_configurations.each do |config|
+    config.build_settings['LD_RUNPATH_SEARCH_PATHS'] = ['$(FRAMEWORK_SEARCH_PATHS)']
+  end
+end
